--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,28 @@
-h1 {
+body {
   font-family: sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
   color: rgb(2, 2, 121);
+}
+
+/* #topics-list {
+  font-style: italic;
+} */
+
+.tool {
+  color: orange;
+}
+
+.lang {
+  color: green;
+}
+
+p .lang {
+  font-style: italic;
+}
+
+#topics-container {
+  padding: 10px;
+  background-color: gray;
 }
